--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -273,6 +273,23 @@
   version = {0.1.55}
 }
 
+@article{brady2013idris,
+  title = {Idris, a General-Purpose Dependently Typed Programming Language: {{Design}} and Implementation},
+  shorttitle = {Idris, a General-Purpose Dependently Typed Programming Language},
+  author = {Brady, Edwin},
+  date = {2013-09},
+  journaltitle = {Journal of Functional Programming},
+  volume = {23},
+  pages = {552--593},
+  issn = {0956-7968, 1469-7653},
+  doi = {10.1017/S095679681300018X},
+  url = {http://www.journals.cambridge.org/abstract_S095679681300018X},
+  urldate = {2015-11-15},
+  file = {/home/philipp/Zotero/storage/MA5W2T85/Brady_2013_Idris, a general-purpose dependently typed programming language.pdf},
+  langid = {english},
+  number = {05}
+}
+
 @book{bronstein1995taschenbuch,
   title = {Taschenbuch der Mathematik: Ergänzende Kapitel},
   author = {Bronstein, Ilja Nikolajewitsch and Semendjajew, Konstantin Adolfowitsch},
@@ -358,6 +375,19 @@
   isbn = {978-0-470-01875-0},
   pagetotal = {573},
   series = {Wiley Series in Probability and Statistics}
+}
+
+@unpublished{coqdevelopmentteam2010coq,
+  title = {The {{Coq}} Proof Assistant: {{Reference}} Manual},
+  author = {Coq Development Team, The},
+  date = {2010},
+  abstract = {This document is the Reference Manual of version 8.3pl1 of the C OQ proof assistant. A companion volume, the C OQ Tutorial, is provided for the beginners. It is advised to read the Tutorial first. A book [14] on practical uses of the C OQ system was published in 2004 and is a good support for both the beginner and the advanced user.},
+  file = {/home/philipp/Zotero/storage/HTQS89AV/Coq_Development_Team-2010-The_Coq_proof_assistant.pdf},
+  howpublished = {Manual},
+  keywords = {coq,dependent types,functional programming,programming,programming language,proof assistants,theoretical cs,type theory},
+  langid = {english},
+  pagetotal = {451},
+  type = {Manual}
 }
 
 @inproceedings{cusumano-towner2019gen,
